add react service & add react views to post
